// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQBI8pcG4ndpcTToFaueHgZoJFZjILosn9iSjo1w8eq7Np-G"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQBcR_fKghFpMk5iEeori9zT90-hpDXqQAPXgHn76qN-B-Mc"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQBRQtdrqdyC3JmkvVoJ3X9PsPYKenXdzGr_jZof6Hz-VLL4"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQBI8pcG4ndpcTToFaueHgZoJFZjILosn9iSjo1w8eq7Np-G",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 15391n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBI8pcG4ndpcTToFaueHgZoJFZjILosn9iSjo1w8eq7Np-G",
            "to": "kQBcR_fKghFpMk5iEeori9zT90-hpDXqQAPXgHn76qN-B-Mc",
            "type": "internal",
            "value": "9.970412",
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBI8pcG4ndpcTToFaueHgZoJFZjILosn9iSjo1w8eq7Np-G",
          "to": "kQBcR_fKghFpMk5iEeori9zT90-hpDXqQAPXgHn76qN-B-Mc",
          "type": "internal",
          "value": "9.970412",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13928n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBcR_fKghFpMk5iEeori9zT90-hpDXqQAPXgHn76qN-B-Mc",
            "to": "kQBRQtdrqdyC3JmkvVoJ3X9PsPYKenXdzGr_jZof6Hz-VLL4",
            "type": "internal",
            "value": "9.946421",
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBcR_fKghFpMk5iEeori9zT90-hpDXqQAPXgHn76qN-B-Mc",
          "to": "kQBRQtdrqdyC3JmkvVoJ3X9PsPYKenXdzGr_jZof6Hz-VLL4",
          "type": "internal",
          "value": "9.946421",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13856n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBRQtdrqdyC3JmkvVoJ3X9PsPYKenXdzGr_jZof6Hz-VLL4",
            "to": "kQBRQtdrqdyC3JmkvVoJ3X9PsPYKenXdzGr_jZof6Hz-VLL4",
            "type": "internal",
            "value": "9.92269",
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBRQtdrqdyC3JmkvVoJ3X9PsPYKenXdzGr_jZof6Hz-VLL4",
          "to": "kQBRQtdrqdyC3JmkvVoJ3X9PsPYKenXdzGr_jZof6Hz-VLL4",
          "type": "internal",
          "value": "9.92269",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4384n,
      },
    ],
  },
]
`;
